# stocks-api

./: docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
stocks/: models.py  serializers.py  urls.py  views.py
stocks/migrations/: 0001_initial.py  0002_stock_price.py
stocks_project/: asgi.py  settings.py  urls.py  wsgi.py
